--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,7 @@
 <!-- Opdater URL til webui mappen! -->
-<meta http-equiv="refresh" content="0; URL='http://google.com'" />
+<!-- <meta http-equiv="refresh" content="0; URL='http://google.com'" /> -->
 <!-- https://www.w3schools.com/Tags/att_meta_http_equiv.asp -->
-<!-- Få indsat en dynamiske, hvad url køre jeg på, se andet kode. -->
-<!-- <script> -->
-<!-- få tilfået /webui til url!  -->
-<!-- location.assign(location.toString()); -->
-<!-- </script> -->
-<!-- <button class="btn"><i class="fa fa-download"></i>[Download 🗎]</button> -->
-<!-- <button class="btn"><i class="fa fa-undo"></i>[Start Forfra ↺]</button> -->
-<!-- <button class="btn"><i class="fa fa-upload"></i>[Upload ☁]</button> -->
+<!-- Finder, hvad url der køres på, og tilføjer webui mappen, til url, for derefter at vidre stille. -->
 <script>
     str = location.toString();
     var newstr = str.substring(0, str.lastIndexOf("/"));
